in order to get hte warning to go away (if it doesn't find a 
rendering method, ewl will just fall back to software).  To use
hardware acceleration, just do this:

  ewldbtool ~/.ewl/preferences "render/method" "3D_Hardware"
  (the key is case-sensitive but the value itself is not)

- there's still a little bit of garbage int he rendering.. gonna look
in to that (it's either evas or ewl... not sure yet).

-----
20000905-1618-PDT, pabs

- fixed rendering problem.  actually it wasn't a problem with ewl or
evas at all -- just me not thinking straight.  
- misc cleanups to code.  tonight or tomorrow I'm gonna rip apart the
theme code and get it to work with evas -- you'll need to use this
stuff in the realize handler in order for it to work correctly.  init
is goign to be just for sanitization and connecting callbacks --
realize will be where all the goodies are (because widgets are
guaranteed to have X resources allocated, and guaranteed to have a
parent).

-----
20000906-1325-PDT, pabs

- moved all EwlWidnow event handlers to their own functions -- looks
much cleaner that way.

-----
20000906-1332-PDT, pabs

- cleaned up the src/create_user_preferences.sh script a little bit, and
added a few comments.

-----
20000906-1653-PDT, pabs

- changes to ewl_widget_get_theme() to use Evas.
- made EwlWidget::bg an Evas_Object instead of an Imlib_Image
- moved all ewl_widget_get_theme() calls to the realize handlers
- okay BIG CHANGES -- we are officially using realize for widgets
now.  you CANNOT CALL ewl_widget_get_theme() from the widgettype_init()
func anymore -- you will get a coredump.  The only thing you do in
the *_init() handler is sanitize member varialbes, get non-image
data with the ewl_theme_* functionsi, and connect default callbacks.
Again, DO NOT CALL ewl_widget_get_theme() from your _init() handlers.
All of the toher code has changed to reflect this.

-----
20000906-1701-PDT, pabs

- cleaned up TODO and README a bit.
